[package]
name = "bima_v1_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
risc0-zkp = { git = "https://github.com/risc0/risc0.git" } 
risc0-zkvm = { git = "https://github.com/risc0/risc0.git" }
ink_lang = { version = "3.0", default-features = false }
ink_env = { version = "5.0.0", default-features = false }
num-bigint = "0.4.0"
num-traits = "0.2.14"
ink_storage = "5.0.0"  # Removed features = ["no_std"]
ink_engine = "5.0.0"
secp256k1 = "0.29.1"
hex = "0.4.3"
bitcoin = { version = "0.32.2", features = ["serde", "rand"] }
bitcoincore-rpc = "0.19.0"
merkle_light = "0.4.0"           # Light merkle tree implementation with SPV support and dependency agno
merkle_light_derive = "0.4.0"    # #[derive(Hashable)] for light merkle tree Hashable


[features]
std = ["ink_lang/std", "ink_storage/std"]


